fixing photo alignment

--- a/static/css/view_one_page.css
+++ b/static/css/view_one_page.css
@@ -9,9 +9,18 @@
 }
 
 .img-container {
-    height: 300px;
-    weidth: 300px;
+    width: 200px;
+    height: auto;
     overflow: hidden;
     padding: 10px;
     margin: 10px;
+    float: left;
+    position:relative
+}
+
+.img-containerNewLine {
+    clear: both;
+    float: left;
+    display: block;
+    position: relative;
 }
